[gd_scene load_steps=11 format=3 uid="uid://lr4e0chikgsr"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_xqc54"]
[ext_resource type="Script" path="res://Scripts/door_trigger.gd" id="3_6t1pe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ueunb"]
size = Vector2(76, 76)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_uvgul"]
size = Vector2(75, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c606o"]
size = Vector2(72, 999)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_wrmla"]
size = Vector2(75, 1000)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gyvug"]
size = Vector2(69, 699)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_bpo1b"]
size = Vector2(75, 700)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7cbqy"]
size = Vector2(60.5, 90.5)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_agx6q"]

[node name="Cafe" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(577, 325)
motion_mode = 1
script = ExtResource("1_xqc54")

[node name="Hitbox" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_ueunb")

[node name="Sprite" type="Sprite2D" parent="Player"]
texture = SubResource("PlaceholderTexture2D_uvgul")

[node name="Camera2D" type="Camera2D" parent="Player"]
enabled = false
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="Counter" type="StaticBody2D" parent="."]
position = Vector2(576, 610)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Counter"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_c606o")

[node name="Sprite2D" type="Sprite2D" parent="Counter"]
texture = SubResource("PlaceholderTexture2D_wrmla")

[node name="BackWall" type="StaticBody2D" parent="."]
position = Vector2(576, 65)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackWall"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_c606o")

[node name="Sprite2D" type="Sprite2D" parent="BackWall"]
texture = SubResource("PlaceholderTexture2D_wrmla")

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2(40, 312)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_gyvug")

[node name="Sprite2D" type="Sprite2D" parent="Wall"]
texture = SubResource("PlaceholderTexture2D_bpo1b")

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2(1114, 311)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_gyvug")

[node name="Sprite2D" type="Sprite2D" parent="Wall2"]
texture = SubResource("PlaceholderTexture2D_bpo1b")

[node name="BackDoorTrigger" type="Area2D" parent="."]
position = Vector2(291, 67)
script = ExtResource("3_6t1pe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackDoorTrigger"]
shape = SubResource("RectangleShape2D_7cbqy")

[node name="Sprite2D" type="Sprite2D" parent="BackDoorTrigger"]
scale = Vector2(64, 94)
texture = SubResource("PlaceholderTexture2D_agx6q")

[connection signal="body_entered" from="BackDoorTrigger" to="Player" method="_on_back_door_trigger_body_entered"]
[connection signal="body_exited" from="BackDoorTrigger" to="Player" method="_on_back_door_trigger_body_exited"]
