[gd_scene load_steps=11 format=3 uid="uid://b8meb5mnspj6n"]

[ext_resource type="Script" path="res://player.gd" id="1_0so4s"]
[ext_resource type="Script" path="res://door_trigger.gd" id="2_nb7wt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0at43"]
size = Vector2(72, 999)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ulffs"]
size = Vector2(75, 1000)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tqlh6"]
size = Vector2(69, 699)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_pcu3r"]
size = Vector2(75, 700)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ba0k"]
size = Vector2(76, 76)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_k1uen"]
size = Vector2(75, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0nuo"]
size = Vector2(60.5, 90.5)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_3xube"]

[node name="TheBack" type="Node2D"]

[node name="FrontWall" type="StaticBody2D" parent="."]
position = Vector2(576, 610)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontWall"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_0at43")

[node name="Sprite2D" type="Sprite2D" parent="FrontWall"]
texture = SubResource("PlaceholderTexture2D_ulffs")

[node name="BackWall" type="StaticBody2D" parent="."]
position = Vector2(576, -707)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackWall"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_0at43")

[node name="Sprite2D" type="Sprite2D" parent="BackWall"]
texture = SubResource("PlaceholderTexture2D_ulffs")

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2(39, -47.935)
scale = Vector2(1, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_tqlh6")

[node name="Sprite2D" type="Sprite2D" parent="Wall"]
texture = SubResource("PlaceholderTexture2D_pcu3r")

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2(1113, -47.935)
scale = Vector2(1, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_tqlh6")

[node name="Sprite2D" type="Sprite2D" parent="Wall2"]
texture = SubResource("PlaceholderTexture2D_pcu3r")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(580, -471)
motion_mode = 1
script = ExtResource("1_0so4s")

[node name="Hitbox" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_2ba0k")

[node name="Sprite" type="Sprite2D" parent="Player"]
texture = SubResource("PlaceholderTexture2D_k1uen")

[node name="Camera2D" type="Camera2D" parent="Player"]
limit_left = 0
limit_top = -740
limit_right = 1150
limit_bottom = 625
position_smoothing_enabled = true
position_smoothing_speed = 10.0
editor_draw_limits = true

[node name="FrontDoorTrigger" type="Area2D" parent="."]
position = Vector2(252, 601)
script = ExtResource("2_nb7wt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontDoorTrigger"]
shape = SubResource("RectangleShape2D_b0nuo")

[node name="Sprite2D" type="Sprite2D" parent="FrontDoorTrigger"]
scale = Vector2(64, 94)
texture = SubResource("PlaceholderTexture2D_3xube")

[connection signal="body_entered" from="FrontDoorTrigger" to="Player" method="_on_front_door_trigger_body_entered"]
[connection signal="body_exited" from="FrontDoorTrigger" to="Player" method="_on_front_door_trigger_body_exited"]
